--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ iframe {
 
 /* Updated responsive iframe styling to accommodate larger charts */
 iframe {
-  height: auto;
+  height: 100%;
   width: 100%;
   /* Adjusting max-width to 1000px to match your specified requirements */
   max-width: 1000px;
